<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

	<modelVersion>4.0.0</modelVersion>
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<groupId>de.abg.jreichert.activeanno</groupId>
	<artifactId>de.abg.jreichert.activeanno.parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<platform-version-name>luna</platform-version-name>
		<tycho-version>0.22.0</tycho-version>
		<maven-clean-plugin.version>2.5</maven-clean-plugin.version>
		<maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
		<maven-resources-plugin.version>2.7</maven-resources-plugin.version>
		<maven-compiler-plugin-version>3.2</maven-compiler-plugin-version>
		<maven-install-plugin.version>2.5.2</maven-install-plugin.version>
		<maven-surefire-plugin.version>2.18</maven-surefire-plugin.version>
		<maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>
		<maven-release-plugin.version>2.5.1</maven-release-plugin.version>
		<build-helper-maven-plugin.version>1.9.1</build-helper-maven-plugin.version>
		<eclipse-signing-maven-plugin.version>1.0.5</eclipse-signing-maven-plugin.version>
		<exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
		<xtend-maven-plugin-version>2.8.2</xtend-maven-plugin-version>
		<xtend-library-version>2.8.2</xtend-library-version>
		<xtend-gen.directory>${project.build.directory}/generated-sources/xtend-gen</xtend-gen.directory>
		<xtext-version>2.8.2</xtext-version>
		<junit-version>4.11</junit-version>
		<maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
		<maven-project-info-reports-plugin.version>2.7</maven-project-info-reports-plugin.version>
		<local-build-platform.version>[3.8,4.5)</local-build-platform.version>
		<java-compile-version>1.8</java-compile-version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.encoding>UTF-8</project.encoding>
		<file.encoding>${project.encoding}</file.encoding>
		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
		<memoryInitial>128m</memoryInitial>
		<memoryMaximum>1024m</memoryMaximum>
		<memoryPermSizeArgs>-XX:PermSize=256m -XX:MaxPermSize=256m</memoryPermSizeArgs>
		<memoryArgs>-Xms${memoryInitial} -Xmx${memoryMaximum}</memoryArgs>
		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
		<loggingArgs>-Dlog4j.configuration=file:${project.basedir}/_common/de.abg.jreichert.activeanno.parent/log4j.xml</loggingArgs>
		<skip.mwe2>true</skip.mwe2>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>false</skip>
					<altDeploymentRepository>internal.repo::default::file://${distribution.dir}</altDeploymentRepository>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
	         </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin-version}</version>
					<configuration>
						<source>>${java-compile-version}</source>
						<target>>${java-compile-version}</target>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
						<meminitial>${memoryInitial}</meminitial>
						<maxmem>${memoryMaximum}</maxmem>
						<source>${java-compile-version}</source>
						<target>${java-compile-version}</target>
						<verbose>true</verbose>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<useUIHarness>false</useUIHarness>
						<useUIThread>false</useUIThread>
						<argLine>${memoryArgs} ${ui.test.vmargs} ${loggingArgs}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>target-platform-configuration</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<resolver>p2</resolver>
						<pomDependencies>consider</pomDependencies>
						<environments>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>win32</os>
								<ws>win32</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>macosx</os>
								<ws>cocoa</ws>
								<arch>x86_64</arch>
							</environment>
							<environment>
								<os>macosx</os>
								<ws>cocoa</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86</arch>
							</environment>
							<environment>
								<os>linux</os>
								<ws>gtk</ws>
								<arch>x86_64</arch>
							</environment>
						</environments>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>${coverageAgent}</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>${build-helper-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src-gen</source>
								</sources>
								<sources>
									<source>${xtend-gen.directory}</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>${exec-maven-plugin-version}</version>
					<executions>
						<execution>
							<phase>generate-sources</phase>
							<goals>
								<goal>java</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<skip>${skip.mwe2}</skip>
						<includeProjectDependencies>false</includeProjectDependencies>
						<includePluginDependencies>true</includePluginDependencies>
						<cleanupDaemonThreads>false</cleanupDaemonThreads>
						<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
						<arguments>
							<argument>file://${project.basedir}/${mwe2.relative.path}</argument>
						</arguments>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.xtext</groupId>
							<artifactId>org.eclipse.xtext.xtext</artifactId>
							<version>${xtext-version}</version>
						</dependency>
						<dependency>
							<groupId>org.eclipse.xtext</groupId>
							<artifactId>org.eclipse.xtext.xbase</artifactId>
							<version>${xtext-version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend-maven-plugin-version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>testCompile</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>${xtend-gen.directory}</outputDirectory>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.xtend</groupId>
							<artifactId>org.eclipse.xtend.lib</artifactId>
							<version>${xtend-library-version}</version>
							<type>pom</type>
						</dependency>
					</dependencies>
				</plugin>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											exec-maven-plugin
										</artifactId>
										<versionRange>
											[1.3.2,)
										</versionRange>
										<goals>
											<goal>java</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
									  <!-- http://wiki.eclipse.org/M2E_compatible_maven_plugins -->
									  <!-- 
										 put ignore here because executing Mwe2Launcher with 
										 exec-maven-plugin should not happen at every project
										 build and more relevant it is causing an Eclipse shutdown
										 because org.codehaus.mojo.exec.ExecJavaMojo during 
										 execution joinNonDaemonThreads is called an this is calling
										 joinThread for each found non daemon thread. When it tries
										 to join the org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher
										 thread this kills the running Eclipse instance without
										 leaving any hint why.
									   -->
									  <ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs></ui.test.vmargs>
			</properties>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>org.eclipse.xtend.lib</artifactId>
				<version>${xtend-library.version}</version>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>central</id>
			<name>Maven Repository Switchboard</name>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>luna</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/luna</url>
		</repository>
		<repository>
			<id>Xtext Update Site</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>sonatype</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>sonatype_snapshot</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<comments>
       All rights reserved.

       This program and the accompanying materials are made
       available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at
       http://www.eclipse.org/legal/epl-v10.htm
      </comments>
		</license>
	</licenses>
</project>
